--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,23 @@
-<h1>Make your form here</h1>
+<h1>List Pirate Info Below:</h1>
+<form method="POST" action="/pirates">
+  <label for="name"> Name: </label>
+  <input type="text" name="pirate[name]">
+  <label for="weight"> Weight: </label>
+  <input type="text" name="pirate[weight]">
+  <label for="height"> Height: </label>
+  <input type="text" name="pirate[height]"><br>
+  <label for="ship_1"> Ship 1 Name: </label>
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]">
+  <label for="type"> Type: </label>
+  <input id="ship_type_1" type="text" name="pirate[ships][][type]">
+  <label for="booty"> Booty: </label>
+  <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"><br>
+  <label for="ship_2"> Ship 2 Name: </label>
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]">
+  <label for="type"> Type: </label>
+  <input id="ship_type_2" type="text" name="pirate[ships][][type]">
+  <label for="booty"> Booty: </label>
+  <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"><br>
+  <input type="submit" value="Submit">
+
+</form>
