--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,27 @@
 <h1>Display your Pirate here</h1>
-
+<p>
+  Name: <%= @new_pirate.name %>
+</p>
+<p>
+  Height: <%= @new_pirate.height %>
+</p>
+<p>
+  Weight: <%= @new_pirate.weight %>
+</p>
 
 <h2>Display your first ship here</h2>
+<% @ships.each do |ship| %>
+<p>Name:
+  <%= ship.name %>
+</p><br />
+<p>Type:
+  <%= ship.type %>
+</p><br />
+<p>Booty: 
+  <%= ship.booty %>
+</p><br />
+<% end %>
+
 
 
 <h2>Display your second ship here</h2>
